fix: vscode構成ファイルの調整

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,16 @@
 {
-  "dart.flutterSdkPath": ".fvm/versions/3.28.0-0.1.pre@beta"
+  "dart.flutterSdkPath": ".fvm/versions/3.28.0-0.1.pre@beta",
+  "search.exclude": {
+    "**/.fvm": true,
+    "*.geojson": true
+  },
+  "files.watcherExclude": {
+    "**/.fvm": true,
+    "*.geojson": true
+  },
+  "explorer.fileNesting.enabled": true,
+  "explorer.fileNesting.patterns": {
+    "pubspec.yaml": "pubspec.lock,pubspec_overrides.yaml,.packages,.flutter-plugins,.flutter-plugins-dependencies,.metadata",
+    "*.dart": "${capture}.*.dart"
+  }
 }
