--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -9,11 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  go_router: ^14.6.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  go_router_builder: ^2.7.1
 
 flutter:
   uses-material-design: true
