--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -9,13 +9,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  freezed_annotation: ^2.4.4
   go_router: ^14.6.2
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   go_router_builder: ^2.7.1
+  build_runner: ^2.4.13
+  freezed: ^2.5.7
+  json_serializable: ^6.9.0
 
 flutter:
   uses-material-design: true
