--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -9,9 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.20.5
   freezed_annotation: ^2.4.4
   go_router: ^14.6.2
+  hooks_riverpod: ^2.6.1
   json_annotation: ^4.9.0
+  riverpod_annotation: ^2.6.1
 
 dev_dependencies:
   flutter_test:
@@ -21,6 +24,9 @@ dev_dependencies:
   build_runner: ^2.4.13
   freezed: ^2.5.7
   json_serializable: ^6.9.0
+  riverpod_generator: ^2.6.3
+  custom_lint: ^0.7.0
+  riverpod_lint: ^2.6.3
 
 flutter:
   uses-material-design: true
