--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,8 +2,8 @@ name: eqdashboard_workspace
 description: The workspace for the EQDashboard project.
 
 environment:
-  sdk: ^3.7.0-209.1.beta
-  flutter: ^3.28.0-0.1.pre
+  sdk: ^3.6.0
+  flutter: ^3.27.0
 
 dependencies:
   melos: ^6.1.0
