--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "dart.flutterSdkPath": ".fvm/versions/3.28.0-0.1.pre@beta",
+  "dart.flutterSdkPath": ".fvm/versions/3.27.0",
   "search.exclude": {
     "**/.fvm": true,
     "*.geojson": true
