--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_acrylic: ^1.1.4
+  flutter_appauth: ^8.0.3
   flutter_hooks: ^0.20.5
   freezed_annotation: ^2.4.4
   go_router: ^14.6.2
