--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -7,16 +7,21 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
+  app_links: ^6.3.3
+  dmdata_oauth:
+    path: ../packages/dmdata_oauth
   flutter:
     sdk: flutter
   flutter_acrylic: ^1.1.4
   flutter_appauth: ^8.0.3
   flutter_hooks: ^0.20.5
+  flutter_secure_storage: ^4.2.1
   freezed_annotation: ^2.4.4
   go_router: ^14.6.2
   hooks_riverpod: ^2.6.1
   json_annotation: ^4.9.0
   riverpod_annotation: ^2.6.1
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   altive_lints: ^1.16.0
