--- a/packages/dmdata_oauth_flutter/pubspec.yaml
+++ b/packages/dmdata_oauth_flutter/pubspec.yaml
@@ -1,4 +1,4 @@
-name: dmdata_oauth
+name: dmdata_oauth_flutter
 version: 1.0.0
 publish_to: "none"
 
@@ -6,6 +6,8 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
+  flutter:
+    sdk: flutter
   app_links: ^6.3.3
   oauth2: ^2.0.3
 dev_dependencies:
