--- a/app/pubspec_overrides.yaml
+++ b/app/pubspec_overrides.yaml
@@ -1,4 +1,3 @@
-# melos_managed_dependency_overrides: dmdata_oauth
+# melos_managed_dependency_overrides: dmdata_oauth_flutter
 dependency_overrides:
-  dmdata_oauth:
-    path: ../packages/dmdata_oauth
+  {dmdata_oauth_flutter: {path: ../packages/dmdata_oauth_flutter}}
