--- a/packages/dmdata_oauth/pubspec.yaml
+++ b/packages/dmdata_oauth/pubspec.yaml
@@ -1,16 +1,9 @@
-name: dmdata_oauth_flutter
+name: dmdata_oauth
 version: 1.0.0
 publish_to: "none"
 
 environment:
   sdk: ^3.6.0
-
-dependencies:
-  flutter:
-    sdk: flutter
-  app_links: ^6.3.3
-  oauth2: ^2.0.3
-
 dev_dependencies:
   eqdashboard_lints:
     path: ../eqdashboard_lints
