--- a/app/pubspec_overrides.yaml
+++ b/app/pubspec_overrides.yaml
@@ -1,3 +1,3 @@
-# melos_managed_dependency_overrides: dmdata_oauth_flutter
+# melos_managed_dependency_overrides: dmdata_oauth_flutter,eqdashboard_lints
 dependency_overrides:
-  {dmdata_oauth_flutter: {path: ../packages/dmdata_oauth_flutter}}
+  {dmdata_oauth_flutter: {path: ../packages/dmdata_oauth_flutter}, eqdashboard_lints: {path: ../packages/eqdashboard_lints}}
