--- a/packages/_base/pubspec.yaml
+++ b/packages/_base/pubspec.yaml
@@ -1,16 +1,11 @@
-name: dmdata_oauth_flutter
+name: _base
 version: 1.0.0
 publish_to: "none"
 
 environment:
   sdk: ^3.6.0
 
-dependencies:
-  flutter:
-    sdk: flutter
-  app_links: ^6.3.3
-  oauth2: ^2.0.3
-
 dev_dependencies:
+  altive_lints: ^1.16.0
   eqdashboard_lints:
     path: ../eqdashboard_lints
