--- a/packages/dmdata_oauth_flutter/analysis_options.yaml
+++ b/packages/dmdata_oauth_flutter/analysis_options.yaml
@@ -1,25 +1,1 @@
-include: package:yumemi_lints/flutter/3.24/recommended.yaml
-
-linter:
-  rules:
-    - diagnostic_describe_all_properties: ignore
-    - avoid_print: ignore
-    - lines_longer_than_80_chars: ignore
-    - document_ignores: ignore
-    - require_trailing_commas
-
-analyzer:
-  errors:
-    # https://pub.dev/packages/freezed#install
-    invalid_annotation_target: ignore
-  plugins:
-    - custom_lint
-  exclude:
-    - "**/*.*.dart"
-
-custom_lint:
-  rules:
-    - prefer_clock_now: false
-    - avoid_hardcoded_color: false
-    - avoid_hardcoded_japanese: false
-    - avoid_single_child: false
+include: package:eqdashboard_lints/analysis_options.yaml
