--- a/app/macos/Runner/Configs/AppInfo.xcconfig
+++ b/app/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = eqdashboard
+PRODUCT_NAME = EQDashboard
 
 // The application's bundle identifier
 PRODUCT_BUNDLE_IDENTIFIER = net.yumnumm.eqdashboard
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 net.yumnumm. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 Ryotaro Onoue All rights reserved.
