--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -8,11 +8,11 @@ environment:
 
 dependencies:
   app_links: ^6.3.3
+  cupertino_icons: ^1.0.8
   dmdata_oauth_flutter:
     path: ../packages/dmdata_oauth_flutter
   flutter:
     sdk: flutter
-  flutter_acrylic: ^1.1.4
   flutter_appauth: ^8.0.3
   flutter_hooks: ^0.20.5
   flutter_secure_storage: ^4.2.1
@@ -20,6 +20,7 @@ dependencies:
   go_router: ^14.6.2
   hooks_riverpod: ^2.6.1
   json_annotation: ^4.9.0
+  macos_ui: ^2.0.9
   riverpod_annotation: ^2.6.1
   shared_preferences: ^2.3.3
 
