--- a/packages/dmdata_oauth/pubspec.yaml
+++ b/packages/dmdata_oauth/pubspec.yaml
@@ -4,6 +4,16 @@ publish_to: "none"
 
 environment:
   sdk: ^3.6.0
+
 dev_dependencies:
   eqdashboard_lints:
     path: ../eqdashboard_lints
+  build_runner: ^2.4.13
+  freezed: ^2.5.7
+  json_serializable: ^6.9.0
+  retrofit_generator: ^9.1.5
+  test: ^1.25.2
+dependencies:
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  retrofit: ^4.4.1
