--- a/packages/dmdata_oauth_flutter/pubspec.yaml
+++ b/packages/dmdata_oauth_flutter/pubspec.yaml
@@ -8,19 +8,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  app_links: ^6.3.3
-  oauth2: ^2.0.3
-  freezed_annotation: ^2.4.4
-
-  hooks_riverpod: ^2.6.1
-  flutter_hooks: ^0.20.5
-  riverpod_annotation: ^2.6.1
+  freezed_annotation: ^2.4.1
   flutter_secure_storage: ^4.2.1
+  json_annotation: ^4.9.0
+  dmdata_oauth_api_client:
+    path: ../dmdata_oauth_api_client
 
 dev_dependencies:
   build_runner: ^2.4.13
   freezed: ^2.5.7
   json_serializable: ^6.9.0
-  riverpod_generator: ^2.6.3
   custom_lint: ^0.7.0
-  riverpod_lint: ^2.6.3
+  mocktail: ^1.0.0
+  flutter_test:
+    sdk: flutter
