chore(dependencies): Update dependency overrides and add new packages
- Updated pubspec_overrides.yaml to include dmdata_oauth_api_client in dependency overrides.
- Added dio and url_launcher dependencies in pubspec.yaml with their respective versions.
- Updated pubspec.lock to reflect the addition of dio, url_launcher, and their transitive dependencies.
- Registered url_launcher plugins for Linux, macOS, and Windows platforms.
- Refactored dmdata_oauth_flutter to export dmdata_oauth_api_client and updated its pubspec.lock to change eqdashboard_lints dependency to direct dev.

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   app_links: ^6.3.3
   cupertino_icons: ^1.0.8
+  dio: ^5.7.0
   dmdata_oauth_flutter:
     path: ../packages/dmdata_oauth_flutter
   flutter:
@@ -23,6 +24,7 @@ dependencies:
   macos_ui: ^2.0.9
   riverpod_annotation: ^2.6.1
   shared_preferences: ^2.3.3
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   altive_lints: ^1.16.0
