--- a/packages/dmdata_oauth_flutter/pubspec.yaml
+++ b/packages/dmdata_oauth_flutter/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.4.13
+  eqdashboard_lints:
+    path: ../eqdashboard_lints
   freezed: ^2.5.7
   json_serializable: ^6.9.0
   custom_lint: ^0.7.0
