--- a/packages/dmdata_oauth_flutter/pubspec.yaml
+++ b/packages/dmdata_oauth_flutter/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   json_annotation: ^4.9.0
   dmdata_oauth_api_client:
     path: ../dmdata_oauth_api_client
+  crypto: ^3.0.6
 
 dev_dependencies:
   build_runner: ^2.4.13
