--- a/packages/dmdata_oauth_flutter/pubspec.yaml
+++ b/packages/dmdata_oauth_flutter/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   dmdata_oauth_api_client:
     path: ../dmdata_oauth_api_client
   crypto: ^3.0.6
+  flutter_appauth: ^8.0.3
 
 dev_dependencies:
   build_runner: ^2.4.13
