--- a/packages/dmdata_oauth_api_client/pubspec.yaml
+++ b/packages/dmdata_oauth_api_client/pubspec.yaml
@@ -6,14 +6,15 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
+  dio: ^5.7.0
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   retrofit: ^4.4.1
 
 dev_dependencies:
+  build_runner: ^2.4.13
   eqdashboard_lints:
     path: ../eqdashboard_lints
-  build_runner: ^2.4.13
   freezed: ^2.5.7
   json_serializable: ^6.9.0
   retrofit_generator: ^9.1.5
