--- a/packages/dmdata_oauth_flutter/build.yaml
+++ b/packages/dmdata_oauth_flutter/build.yaml
@@ -1,11 +1,12 @@
 targets:
   $default:
     builders:
+      source_gen|combining_builder:
+        options:
+          ignore_for_file:
+            - type=lint
+            - duplicate_ignore
       json_serializable:
         options:
           checked: true
           field_rename: snake
-      freezed:
-        generate_for:
-          include:
-            - lib/src/model/**.dart
