--- a/packages/dmdata_oauth_flutter/pubspec.yaml
+++ b/packages/dmdata_oauth_flutter/pubspec.yaml
@@ -6,23 +6,24 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
-  flutter:
-    sdk: flutter
-  freezed_annotation: ^2.4.4
-  flutter_secure_storage: ^9.2.2
-  json_annotation: ^4.9.0
+  crypto: ^3.0.6
   dmdata_oauth_api_client:
     path: ../dmdata_oauth_api_client
-  crypto: ^3.0.6
+  flutter:
+    sdk: flutter
   flutter_appauth: ^8.0.3
+  flutter_appauth_platform_interface: ^8.0.0
+  flutter_secure_storage: ^9.2.2
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   build_runner: ^2.4.13
+  custom_lint: ^0.7.0
   eqdashboard_lints:
     path: ../eqdashboard_lints
-  freezed: ^2.5.7
-  json_serializable: ^6.9.0
-  custom_lint: ^0.7.0
-  mocktail: ^1.0.4
   flutter_test:
     sdk: flutter
+  freezed: ^2.5.7
+  json_serializable: ^6.9.0
+  mocktail: ^1.0.4
