--- a/packages/dmdata_api/pubspec.yaml
+++ b/packages/dmdata_api/pubspec.yaml
@@ -6,6 +6,7 @@ environment:
   sdk: ^3.6.0
 
 dependencies:
+  dio: ^5.7.0
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   retrofit: ^4.4.1
@@ -16,6 +17,7 @@ dev_dependencies:
   eqdashboard_lints:
     path: ../eqdashboard_lints
   freezed: ^2.5.7
+  http_mock_adapter: ^0.6.1
   json_serializable: ^6.9.0
   retrofit_generator: ^9.1.5
   test: ^1.25.2
