chore(dependencies): Update pubspec.lock and add dmdata_api dependency
- Updated pubspec.lock to include new transitive dependencies such as analyzer, convert, and logging.
- Added dmdata_api as a direct dependency in pubspec.yaml, pointing to the local package.
- Refactored imports in various files to reflect the new structure, moving platform_selector_screen and dmdata_settings_screen to the settings directory.
- Removed obsolete files related to the previous structure to streamline the codebase.

--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -10,6 +10,8 @@ dependencies:
   collection: ^1.19.0
   cupertino_icons: ^1.0.8
   dio: ^5.7.0
+  dmdata_api:
+    path: ../packages/dmdata_api
   dmdata_oauth_flutter:
     path: ../packages/dmdata_oauth_flutter
   flutter:
