--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   macos_ui: ^2.0.9
   riverpod_annotation: ^2.6.1
   shared_preferences: ^2.3.3
+  synchronized: ^3.3.0+3
   url_launcher: ^6.3.1
 
 dev_dependencies:
