--- a/packages/dmdata_oauth_flutter/pubspec.yaml
+++ b/packages/dmdata_oauth_flutter/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
 
 dependencies:
   crypto: ^3.0.6
+  dio: ^5.7.0
   dmdata_oauth_api_client:
     path: ../dmdata_oauth_api_client
   flutter:
