--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_appauth: ^8.0.3
   flutter_hooks: ^0.20.5
   flutter_secure_storage: ^9.2.2
+  flutter_staggered_grid_view: ^0.7.0
   freezed_annotation: ^2.4.4
   go_router: ^14.6.2
   hooks_riverpod: ^2.6.1
