--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   collection: ^1.19.0
   cupertino_icons: ^1.0.8
+  cupertino_sidebar: ^1.0.1
   dio: ^5.7.0
   dmdata_api:
     path: ../packages/dmdata_api
