--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   riverpod_annotation: ^2.6.1
   shared_preferences: ^2.3.3
   synchronized: ^3.3.0+3
+  talker: ^4.5.2
+  talker_dio_logger: ^4.5.2
+  talker_flutter: ^4.5.2
+  talker_logger: ^4.5.2
   url_launcher: ^6.3.1
 
 dev_dependencies:
