--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -8,6 +8,7 @@ on:
     branches:
       - main
       - develop
+      - "*" # TODO(YumNumm): デバッグ用なので後で消す
   workflow_dispatch:
     inputs:
       ios:
