chore: update iOS build process and configuration
- Added a new step to fetch the latest build number from App Store Connect.
- Introduced a new `ExportOptions.plist` file for iOS build configuration.
- Updated the iOS project bundle identifier to `net.yumnumm.EQDashboard`.
- Modified GitHub Actions workflow to include steps for building and deploying the iOS app.
- Added a new entry to `.gitignore` for `*.p8` files.

--- a/.github/actions/generate-app-store-connect-jwt/action.yaml
+++ b/.github/actions/generate-app-store-connect-jwt/action.yaml
@@ -19,13 +19,9 @@ runs:
   steps:
     - name: Create App Store Connect API Token
       shell: bash
-      env:
-        alg: ES256
-        kid: ${{ inputs.app_store_connect_api_key_id }}
-        typ: JWT
       run: |
         # JWT Header
-        header=$(echo '{"alg": "HS256", "typ": "JWT", "kid": ${{inputs.app_store_connect_api_key_id}}}' | \
+        header=$(echo '{"alg": "HS256", "typ": "JWT", "kid": "${{inputs.app_store_connect_api_key_id}}"}' | \
           openssl base64 -e -A | \
           tr '+/' '-_' | \
           tr -d '=') )
