--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -112,3 +112,86 @@ jobs:
         with:
           app_store_connect_api_key_id: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
           app_store_connect_api_key_base64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
+
+      - name: Fetch latest build number
+        id: fetch-latest-build-number
+        run: |
+          platform=IOS
+          app_id=6739848784
+          curl -s https://api.appstoreconnect.apple.com/v1/builds \
+            -G \
+            -d "filter[platform]=${platform}" \
+            -d "filter[id]=${app_id}" \
+            -d "sort=-version" \
+            -d "fields[builds]=version" \
+            -d "limit=1" | \
+            jq -r '.data.[].attributes.version' | \
+            read -r build_number
+          if [ -z "$build_number" ]; then
+            echo "This is the first build. Set build number to 1."
+            build_number=1
+          else
+            echo "Current build number: $build_number. Increment build number."
+            build_number=$((build_number + 1))
+          fi
+          echo "build_number=${build_number}" >> $GITHUB_OUTPUT
+
+      - name: Extract App Store Connect API Key
+        working-directory: app/ios
+        run: echo "${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}" | base64 -d > AuthKey.p8
+
+      - name: Build iOS
+        env:
+          BUILD_NUMBER: ${{ steps.fetch-latest-build-number.outputs.build_number }}
+        run: |
+          echo "BUILD_NUMBER=${BUILD_NUMBER}"
+          flutter build ios --no-codesign --build-number=${BUILD_NUMBER}
+          xcodebuild -workspace ios/Runner.xcworkspace \
+            -scheme Runner \
+            -sdk iphoneos \
+            -configuration Release archive \
+            -archivePath build/ios/Runner.xcarchive \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGNING_ALLOWED=NO
+          xcodebuild -exportArchive \
+            -archivePath build/ios/Runner.xcarchive \
+            -exportOptionsPlist build/ios/ExportOptions.plist \
+            -exportPath build/ios/ipa \
+            -allowProvisioningUpdates \
+            -authenticationKeyIssuerID ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
+            -authenticationKeyID ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }} \
+            -authenticationKeyPath AuthKey.p8
+
+      - name: Upload ipa as artifact
+        uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
+        with:
+          name: ipa
+          path: build/ios/ipa/Runner.ipa
+
+  deploy-ios:
+    needs: build-ios
+    if: ${{ needs.build-ios.outputs.deploy-ios }}
+    name: Deploy iOS
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download ipa
+        uses: actions/download-artifact@v4.1.1
+        with:
+          name: ipa
+          path: Runner.ipa
+
+      - name: Setup macOS Environment
+        uses: ./.github/actions/setup-macos-environment
+
+      - name: Extract App Store Connect API Key
+        run: echo "${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}" | base64 -d > AuthKey.p8
+
+      - name: Upload Ipa to App Store Connect
+        run: |
+          xcrun altool \
+            --upload-app \
+            -f Runner.ipa \
+            --type ios \
+            --apiIssuer ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
+            --apiKeyPath AuthKey.p8 \
+            --verbose
