--- a/.github/actions/generate-app-store-connect-jwt/action.yaml
+++ b/.github/actions/generate-app-store-connect-jwt/action.yaml
@@ -2,9 +2,6 @@ name: Generate App Store Connect JWT
 description: Generate App Store Connect JWT
 
 inputs:
-  app_store_connect_api_key_id:
-    required: true
-    description: App Store Connect API Key ID
   app_store_connect_api_key_base64:
     required: true
     description: App Store Connect API Key Base64
@@ -17,45 +14,16 @@ outputs:
 runs:
   using: "composite"
   steps:
-    - name: Create App Store Connect API Token
+    # https://github.com/actions/setup-bun
+    - uses: actions/setup-bun@4bc047ad259df6fc24a6c9b0f9a0cb08cf17fbe5 # v2.0.1
+
+    - name: Extract App Store Connect API Key
       shell: bash
       run: |
-        # JWT Header
-        echo '{"alg": "HS256", "typ": "JWT", "kid": "${{inputs.app_store_connect_api_key_id}}"}' | \
-          jq -c | \
-          openssl base64 -e -A | \
-          tr '+/' '-_' | \
-          tr -d '=' | \
-          read -r header
-        echo $header
+        echo ${{ inputs.app_store_connect_api_key_base64 }} | base64 -d > AuthKey.p8
 
-        # JWT Payload
-        current_time=$(date +%s)
-        expiration_time=$(( $current_time + 3600 )) # 10 mins
-        echo '
-          {
-            "iss": ${{inputs.app_store_connect_api_key_id}},
-            "iat": $current_time,
-            "exp": $expiration_time,
-            "aud": "appstoreconnect-v1"
-          }
-          ' | jq -c | \
-          openssl base64 -e -A | \
-          tr '+/' '-_' | \
-          tr -d '=') | \
-          read -r payload
-        echo $payload
-
-        # JWT Signature
-        echo ${{inputs.app_store_connect_api_key_base64}} | base64 -d > AuthKey_${{inputs.app_store_connect_api_key_id}}.p8
-        signature=$(echo -n "$header.$payload" | \
-          openssl dgst -binary -sha256 -sign AuthKey_${{inputs.app_store_connect_api_key_id}}.p8 | \
-          openssl base64 -e -A | \
-          tr '+/' '-_' | \
-          tr -d '='))
-
-        # JWT
-        jwt=$(echo -n "$header.$payload.$signature")
-
-        echo "JWT=${jwt}" >> $GITHUB_OUTPUT
-        echo $jwt | shasum -a 256
+    - name: Generate App Store Connect API JWT
+      shell: bash
+      run: |
+        jwt=$(bun run scripts/app-store-connect-api-key.ts)
+        echo "jwt=$jwt" >> $GITHUB_OUTPUT
