chore: update GitHub Action to use oven-sh/setup-bun for App Store Connect JWT generation

--- a/.github/actions/generate-app-store-connect-jwt/action.yaml
+++ b/.github/actions/generate-app-store-connect-jwt/action.yaml
@@ -14,8 +14,8 @@ outputs:
 runs:
   using: "composite"
   steps:
-    # https://github.com/actions/setup-bun
-    - uses: actions/setup-bun@4bc047ad259df6fc24a6c9b0f9a0cb08cf17fbe5 # v2.0.1
+    # https://github.com/oven-sh/setup-bun
+    - uses: oven-sh/setup-bun@4bc047ad259df6fc24a6c9b0f9a0cb08cf17fbe5 # v2.0.1
 
     - name: Extract App Store Connect API Key
       shell: bash
