fix: correct syntax for decoding App Store Connect API key in GitHub Action

--- a/.github/actions/generate-app-store-connect-jwt/action.yaml
+++ b/.github/actions/generate-app-store-connect-jwt/action.yaml
@@ -20,7 +20,7 @@ runs:
     - name: Extract App Store Connect API Key
       shell: bash
       run: |
-        echo ${{ inputs.app_store_connect_api_key_base64 }} | base64 -d > AuthKey.p8
+        echo '${{ inputs.app_store_connect_api_key_base64 }}' | base64 -d > AuthKey.p8
 
     - name: Generate App Store Connect API JWT
       shell: bash
