fix: zshの変数代入方法

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -115,6 +115,7 @@ jobs:
 
       - name: Fetch latest build number
         id: fetch-latest-build-number
+        shell: zsh
         run: |
           platform=IOS
           app_id=6739848784
@@ -126,7 +127,7 @@ jobs:
             -d "fields[builds]=version" \
             -d "limit=1" | \
             jq -r '.data | if length == 0 then 0 else .[0].attributes.version end' | \
-            read -r '' build_number
+            read -d '' build_number
           build_number=$((build_number + 1))
           echo "build_number=${build_number}" >> $GITHUB_OUTPUT
           echo "Build Number set to ${build_number}."
