--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -198,8 +198,6 @@ jobs:
             --apiIssuer ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
             --apiKeyPath AuthKey.p8 \
             --verbose
-
-
   build-web:
     needs: define-matrix
     if: ${{ needs.define-matrix.outputs.deploy-web }}
@@ -242,3 +240,85 @@ jobs:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: 4270d8a14dfc1f866629099a788c93e2
           command: pages deploy .
+
+
+  build-macos:
+    needs: define-matrix
+    if: ${{ needs.define-matrix.outputs.deploy-macos }}
+    runs-on: macos-latest
+    timeout-minutes: 15
+    steps:
+      # https://github.com/actions/checkout
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          fetch-depth: 0
+
+      - name: Setup application runtime & Resolve dependencies
+        uses: ./.github/actions/setup-application-runtime
+
+      - name: Setup macOS Environment
+        uses: ./.github/actions/setup-macos-environment
+
+      - name: Create App Store Connect API Token
+        uses: ./.github/actions/generate-app-store-connect-jwt
+        with:
+          app_store_connect_api_key_id: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
+          app_store_connect_api_key_base64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
+
+      - name: Fetch latest build number
+        id: fetch-latest-build-number
+        run: |
+          platform=MACOS
+          app_id=6739848784
+          build_number=$(
+            curl -s https://api.appstoreconnect.apple.com/v1/builds \
+            -G \
+            -d "filter[platform]=${platform}" \
+            -d "filter[id]=${app_id}" \
+            -d "sort=-version" \
+            -d "fields[builds]=version" \
+            -d "limit=1" | \
+            jq -r '.data | if length == 0 then 0 else .[0].attributes.version end'
+          )
+          build_number=$((build_number + 1))
+          echo "build_number=${build_number}" >> $GITHUB_OUTPUT
+          echo "Build Number set to ${build_number}."
+
+      - name: Build macOS
+        working-directory: app
+        env:
+          BUILD_NUMBER: ${{ steps.fetch-latest-build-number.outputs.build_number }}
+        run: |
+          echo "BUILD_NUMBER=${BUILD_NUMBER}"
+          flutter build macos --no-codesign --build-number=${BUILD_NUMBER}
+
+      - name: Extract App Store Connect API Key
+        working-directory: app/ios
+        run: echo "${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}" | base64 -d > AuthKey.p8
+
+      - name: Archive
+        working-directory: app
+        run: |
+          xcodebuild -workspace ios/Runner.xcworkspace \
+            -scheme Runner \
+            -sdk iphoneos \
+            -configuration Release archive \
+            -archivePath build/ios/Runner.xcarchive \
+            CODE_SIGNING_REQUIRED=NO \
+            CODE_SIGNING_ALLOWED=NO
+
+          xcodebuild -exportArchive \
+            -archivePath build/ios/Runner.xcarchive \
+            -exportOptionsPlist ios/ExportOptions.plist \
+            -exportPath build/ios/ipa \
+            -allowProvisioningUpdates \
+            -authenticationKeyIssuerID ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
+            -authenticationKeyID ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }} \
+            -authenticationKeyPath ${{ github.workspace }}/app/ios/AuthKey.p8
+
+      - name: Upload ipa as artifact
+        uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
+        with:
+          name: ipa
+          path: build/ios/ipa/Runner.ipa
