--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -239,7 +239,7 @@ jobs:
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           accountId: 4270d8a14dfc1f866629099a788c93e2
-          command: pages deploy .
+          command: pages deploy . --project-name eq-dashboard
 
 
   build-macos:
@@ -291,34 +291,34 @@ jobs:
           BUILD_NUMBER: ${{ steps.fetch-latest-build-number.outputs.build_number }}
         run: |
           echo "BUILD_NUMBER=${BUILD_NUMBER}"
-          flutter build macos --no-codesign --build-number=${BUILD_NUMBER}
+          flutter build macos --build-number=${BUILD_NUMBER}
 
-      - name: Extract App Store Connect API Key
-        working-directory: app/ios
-        run: echo "${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}" | base64 -d > AuthKey.p8
+      # - name: Extract App Store Connect API Key
+      #   working-directory: app/ios
+      #   run: echo "${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}" | base64 -d > AuthKey.p8
 
-      - name: Archive
-        working-directory: app
-        run: |
-          xcodebuild -workspace ios/Runner.xcworkspace \
-            -scheme Runner \
-            -sdk iphoneos \
-            -configuration Release archive \
-            -archivePath build/ios/Runner.xcarchive \
-            CODE_SIGNING_REQUIRED=NO \
-            CODE_SIGNING_ALLOWED=NO
+      # - name: Archive
+      #   working-directory: app
+      #   run: |
+      #     xcodebuild -workspace ios/Runner.xcworkspace \
+      #       -scheme Runner \
+      #       -sdk iphoneos \
+      #       -configuration Release archive \
+      #       -archivePath build/ios/Runner.xcarchive \
+      #       CODE_SIGNING_REQUIRED=NO \
+      #       CODE_SIGNING_ALLOWED=NO
 
-          xcodebuild -exportArchive \
-            -archivePath build/ios/Runner.xcarchive \
-            -exportOptionsPlist ios/ExportOptions.plist \
-            -exportPath build/ios/ipa \
-            -allowProvisioningUpdates \
-            -authenticationKeyIssuerID ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
-            -authenticationKeyID ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }} \
-            -authenticationKeyPath ${{ github.workspace }}/app/ios/AuthKey.p8
+      #     xcodebuild -exportArchive \
+      #       -archivePath build/ios/Runner.xcarchive \
+      #       -exportOptionsPlist ios/ExportOptions.plist \
+      #       -exportPath build/ios/ipa \
+      #       -allowProvisioningUpdates \
+      #       -authenticationKeyIssuerID ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
+      #       -authenticationKeyID ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }} \
+      #       -authenticationKeyPath ${{ github.workspace }}/app/ios/AuthKey.p8
 
       - name: Upload ipa as artifact
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
         with:
-          name: ipa
-          path: build/ios/ipa/Runner.ipa
+          name: EQDashboard-macos.app
+          path: build/macos/Build/Products/Release/EQDashboard.app
