--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -342,7 +342,8 @@ jobs:
             clang cmake git \
             ninja-build pkg-config \
             libgtk-3-dev liblzma-dev \
-            libstdc++-12-dev
+            libstdc++-12-dev libsecret-1-dev libjsoncpp-dev \
+            libsecret-1-0 libjsoncpp1
 
       - name: Setup application runtime & Resolve dependencies
         uses: ./.github/actions/setup-application-runtime
