fix: update iOS artifact download path in GitHub Actions workflow
- Changed the artifact name from `EQDashboard-ios.xcarchive` to `EQDashboard-ios.ipa`.
- Updated the download path to reflect the new IPA file location.

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -179,8 +179,8 @@ jobs:
       - name: Download ipa
         uses: actions/download-artifact@v4.1.1
         with:
-          name: EQDashboard-ios.xcarchive
-          path: app/build/ios/ipa/Runner.xcarchive
+          name: EQDashboard-ios.ipa
+          path: app/Runner.ipa
 
       - name: Setup macOS Environment
         uses: ./.github/actions/setup-macos-environment
