--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -168,7 +168,7 @@ jobs:
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
         with:
           name: EQDashboard-ios.ipa
-          path: app/Runner.ipa
+          path: app/eqdashboard.ipa
 
   deploy-ios:
     needs: build-ios
