--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -176,6 +176,12 @@ jobs:
     runs-on: macos-latest
     timeout-minutes: 10
     steps:
+      # https://github.com/actions/checkout
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          fetch-depth: 0
+
       - name: Download ipa
         uses: actions/download-artifact@v4.1.1
         with:
