--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -186,7 +186,10 @@ jobs:
         uses: actions/download-artifact@v4.1.1
         with:
           name: EQDashboard-ios.ipa
-          path: Runner.ipa
+          path: eqdashboard.ipa
+
+      - name: List files
+        run: ls -lah
 
       - name: Setup macOS Environment
         uses: ./.github/actions/setup-macos-environment
@@ -201,7 +204,7 @@ jobs:
         run: |
           xcrun altool \
             --upload-app \
-            -f Runner.ipa \
+            -f eqdashboard.ipa \
             --type ios \
             --apiIssuer ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
             --apiKey ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
