--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -296,43 +296,72 @@ jobs:
           echo "build_number=${build_number}" >> $GITHUB_OUTPUT
           echo "Build Number set to ${build_number}."
 
-      - name: Build macOS
+      - name: Generate Build Config
         working-directory: app
         env:
           BUILD_NUMBER: ${{ steps.fetch-latest-build-number.outputs.build_number }}
         run: |
           echo "BUILD_NUMBER=${BUILD_NUMBER}"
-          flutter build macos --build-number=${BUILD_NUMBER}
+          flutter build macos --build-number=${BUILD_NUMBER} --config-only
 
-      # - name: Extract App Store Connect API Key
-      #   working-directory: app/ios
-      #   run: echo "${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}" | base64 -d > AuthKey.p8
+      - name: Archive
+        working-directory: app
+        run: |
+          xcodebuild -workspace macos/Runner.xcworkspace \
+            -scheme Runner \
+            -configuration Release \
+            -archivePath build/macos/Runner.xcarchive \
+            archive | xcbeautify
 
-      # - name: Archive
-      #   working-directory: app
-      #   run: |
-      #     xcodebuild -workspace ios/Runner.xcworkspace \
-      #       -scheme Runner \
-      #       -sdk iphoneos \
-      #       -configuration Release archive \
-      #       -archivePath build/ios/Runner.xcarchive \
-      #       CODE_SIGNING_REQUIRED=NO \
-      #       CODE_SIGNING_ALLOWED=NO
+      - name: Extract App Store Connect API Key
+        run: |
+          mkdir ~/.private_keys
+          echo "${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}" | base64 -d > ~/.private_keys/AuthKey_${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}.p8
+          ls -l ~/.private_keys/AuthKey_${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}.p8
 
-      #     xcodebuild -exportArchive \
-      #       -archivePath build/ios/Runner.xcarchive \
-      #       -exportOptionsPlist ios/ExportOptions.plist \
-      #       -exportPath build/ios/ipa \
-      #       -allowProvisioningUpdates \
-      #       -authenticationKeyIssuerID ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
-      #       -authenticationKeyID ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }} \
-      #       -authenticationKeyPath ${{ github.workspace }}/app/ios/AuthKey.p8
+      - name: Export
+        working-directory: app
+        run: |
+          xcodebuild -exportArchive \
+            -archivePath build/macos/Runner.xcarchive \
+            -exportOptionsPlist macos/ExportOptions.plist \
+            -exportPath build/macos/Release \
+            -allowProvisioningUpdates \
+            -authenticationKeyIssuerID ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
+            -authenticationKeyID ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }} | xcbeautify
 
-      - name: Upload ipa as artifact
+      - name: Upload app as artifact
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
         with:
           name: EQDashboard-macos.app
           path: app/build/macos/Build/Products/Release/EQDashboard.app
+
+  deploy-macos:
+    needs: build-macos
+    name: Deploy macOS
+    runs-on: macos-latest
+    timeout-minutes: 10
+    steps:
+      - name: Download app
+        uses: actions/download-artifact@v4.1.1
+        with:
+          name: EQDashboard-macos.app
+          path: .
+
+      - name: Extract App Store Connect API Key
+        run: |
+          mkdir ~/.private_keys
+          echo "${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}" | base64 -d > ~/.private_keys/AuthKey_${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}.p8
+          ls -l ~/.private_keys/AuthKey_${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}.p8
+
+      - name: Deploy
+        run: |
+          xcrun altool \
+            --upload-app \
+            -f EQDashboard.app \
+            --type macos \
+            --apiIssuer ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
+            --apiKey ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
 
   build-linux:
     needs: define-matrix
