--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -334,7 +334,7 @@ jobs:
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
         with:
           name: EQDashboard-macos.app
-          path: app/build/macos/Build/Products/Release/EQDashboard.app
+          path: app/build/macos/Release/EQDashboard.pkg
 
   deploy-macos:
     needs: build-macos
@@ -345,7 +345,7 @@ jobs:
       - name: Download app
         uses: actions/download-artifact@v4.1.1
         with:
-          name: EQDashboard-macos.app
+          name: EQDashboard-macos.pkg
           path: .
 
       - name: Extract App Store Connect API Key
@@ -358,7 +358,7 @@ jobs:
         run: |
           xcrun altool \
             --upload-app \
-            -f EQDashboard.app \
+            -f EQDashboard.pkg \
             --type macos \
             --apiIssuer ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
             --apiKey ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
