--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -54,6 +54,11 @@ jobs:
       deploy-windows: ${{ steps.define-environment-matrix.outputs.deploy-windows }}
       deploy-linux: ${{ steps.define-environment-matrix.outputs.deploy-linux }}
     steps:
+      - name: Checkout
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+        with:
+          fetch-depth: 0
+
       - name: Decide which app to deploy
         id: define-environment-matrix
         run: |
