--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -335,25 +335,29 @@ jobs:
       - name: Archive
         working-directory: app
         run: |
-          xcodebuild -workspace macos/Runner.xcworkspace \
+          xcrun xcodebuild --exportArchive \
+            -workspace macos/Runner.xcworkspace \
             -scheme Runner \
             -configuration Release \
             -archivePath build/macos/Runner.xcarchive \
             -allowProvisioningUpdates \
             -authenticationKeyIssuerID ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
             -authenticationKeyID ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }} \
-            archive | xcbeautify
+            -authenticationKeyPath ~/.private_keys/AuthKey_${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}.p8 \
+             | xcbeautify
 
       - name: Export
         working-directory: app
         run: |
-          xcodebuild -exportArchive \
+          xcrun xcodebuild -exportArchive \
             -archivePath build/macos/Runner.xcarchive \
             -exportOptionsPlist macos/ExportOptions.plist \
             -exportPath build/macos/Release \
             -allowProvisioningUpdates \
             -authenticationKeyIssuerID ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }} \
-            -authenticationKeyID ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }} | xcbeautify
+            -authenticationKeyID ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }} \
+            -authenticationKeyPath ~/.private_keys/AuthKey_${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}.p8 \
+             | xcbeautify
 
       - name: Upload app as artifact
         uses: actions/upload-artifact@6f51ac03b9356f520e9adb1b1b7802705f340c2b # v4.5.0
